// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SwitchButton should match the snapshot when disabled 1`] = `
<div>
  <button
    aria-checked="true"
    aria-label="Test Switch Button"
    data-testid="react-gdpr-cookie-consent-switch-button"
    disabled=""
    role="switch"
    style="position: relative; display: inline-flex; align-items: center; height: 24px; width: 44px; flex-shrink: 0; border-radius: 9999px; padding: 2px; cursor: not-allowed; opacity: 0.5; transition: background-color 200ms ease-in-out;"
    type="button"
  >
    <span
      aria-hidden="true"
      style="display: inline-block; height: 20px; width: 20px; border-radius: 9999px; background-color: rgb(255, 255, 255); box-shadow: 0 1px 3px rgba(0,0,0,0.2); transform: translateX(20px); transition: transform 200ms ease-in-out; pointer-events: none;"
    />
  </button>
</div>
`;

exports[`SwitchButton should match the snapshot when not toggled 1`] = `
<div>
  <button
    aria-checked="false"
    aria-label="Test Switch Button"
    data-testid="react-gdpr-cookie-consent-switch-button"
    role="switch"
    style="position: relative; display: inline-flex; align-items: center; height: 24px; width: 44px; flex-shrink: 0; border-radius: 9999px; padding: 2px; cursor: pointer; opacity: 1; transition: background-color 200ms ease-in-out;"
    type="button"
  >
    <span
      aria-hidden="true"
      style="display: inline-block; height: 20px; width: 20px; border-radius: 9999px; background-color: rgb(255, 255, 255); box-shadow: 0 1px 3px rgba(0,0,0,0.2); transform: translateX(0); transition: transform 200ms ease-in-out; pointer-events: none;"
    />
  </button>
</div>
`;

exports[`SwitchButton should match the snapshot with minimal configuration 1`] = `
<div>
  <button
    aria-checked="true"
    aria-label="Test Switch Button"
    data-testid="react-gdpr-cookie-consent-switch-button"
    role="switch"
    style="position: relative; display: inline-flex; align-items: center; height: 24px; width: 44px; flex-shrink: 0; border-radius: 9999px; padding: 2px; cursor: pointer; opacity: 1; transition: background-color 200ms ease-in-out;"
    type="button"
  >
    <span
      aria-hidden="true"
      style="display: inline-block; height: 20px; width: 20px; border-radius: 9999px; background-color: rgb(255, 255, 255); box-shadow: 0 1px 3px rgba(0,0,0,0.2); transform: translateX(20px); transition: transform 200ms ease-in-out; pointer-events: none;"
    />
  </button>
</div>
`;

exports[`SwitchButton should match the snapshot with screen reader label 1`] = `
<div>
  <button
    aria-checked="true"
    aria-label="Test Label"
    data-testid="react-gdpr-cookie-consent-switch-button"
    role="switch"
    style="position: relative; display: inline-flex; align-items: center; height: 24px; width: 44px; flex-shrink: 0; border-radius: 9999px; padding: 2px; cursor: pointer; opacity: 1; transition: background-color 200ms ease-in-out;"
    type="button"
  >
    <span
      aria-hidden="true"
      style="display: inline-block; height: 20px; width: 20px; border-radius: 9999px; background-color: rgb(255, 255, 255); box-shadow: 0 1px 3px rgba(0,0,0,0.2); transform: translateX(20px); transition: transform 200ms ease-in-out; pointer-events: none;"
    />
  </button>
</div>
`;
